syntax = "proto3";

option java_package = "com.phoenix.common.grpc.hermes.generated";

service Hermes {
  rpc arbitrate(HermesArbitrageRequest) returns (HermesArbitrageResponse);
}

message HermesArbitrageRequest {
  Graph graph = 1;
  StartVertices startVertices = 2;
  SearchParams searchParams = 3;
}

message SearchParams {
  float minProfitAsPercent = 1;
  float maxProfitAsPercent = 2;
  int32 componentMinSize = 3;
  int32 numberOfRandomLaunches = 4;
}

message StartVertices {
  repeated int32 startVertices = 1;
}

message Graph {
  repeated Edge edges = 1;
  int32 numberOfVertices = 2;
}

message HermesArbitrageResponse {
  repeated Cycle cycles = 1;
}

message Cycle {
  repeated Edge edges = 1;
  float profitAsPercent = 2;
  int32 cycleSize = 3;
  repeated Connection connections = 4;
}

message Connection {
  repeated Edge edges = 1;
  int32 startVertex = 2;
}

message Edge {
  int32 vertexFrom = 1;
  int32 vertexTo = 2;
  float multiplier = 3;
}